--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "use-prefers-color-scheme": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
